# iotedge

edge-agent/src/Microsoft.Azure.Devices.Edge.Agent.Core/: Constants.cs  NestedEdgeParentUrlParser.cs
edge-agent/src/Microsoft.Azure.Devices.Edge.Agent.Kubernetes/: InvalidMountException.cs  KubernetesApplicationSettings.cs  KubernetesEnvironmentOperator.cs  ResourceSettings.cs
edge-agent/src/Microsoft.Azure.Devices.Edge.Agent.Service/: Program.cs
edge-agent/test/Microsoft.Azure.Devices.Edge.Agent.Kubernetes.IntegrationTest/: EdgeDeploymentControllerTest.cs
edgelet/: Cargo.toml
edgelet/aziot-edged/: Cargo.toml
edgelet/aziot-edged/docker/linux/amd64/: Dockerfile
edgelet/aziot-edged/src/: app.rs  lib.rs
edgelet/cert-client/: Cargo.toml
edgelet/edgelet-docker/: Cargo.toml
edgelet/edgelet-http-mgmt/: Cargo.toml
edgelet/edgelet-http-workload/: Cargo.toml
edgelet/edgelet-kube/: Cargo.toml
edgelet/edgelet-kube/src/: constants.rs  error.rs  lib.rs  runtime.rs  settings.rs
edgelet/edgelet-kube/src/convert/: mod.rs  named_secret.rs  to_docker.rs  to_k8s.rs
edgelet/edgelet-kube/src/module/: authentication.rs  create.rs  mod.rs
edgelet/edgelet-kube/src/registry/: image_pull_secret.rs  mod.rs  pull.rs
edgelet/edgelet-utils/src/: lib.rs
edgelet/identity-client/: Cargo.toml
edgelet/iotedge/: Cargo.toml
edgelet/iotedge-proxy/docker/linux/amd64/: Dockerfile
edgelet/iotedge-proxy/src/: settings.rs
edgelet/kube-client/examples/: pod-list.rs
edgelet/kube-client/src/: client.rs  config.rs  error.rs  kube.rs  lib.rs
scripts/linux/: buildEdgelet.sh
(+17 files in other folders)
