[workspace]
members = [
    "aziot-edged",
    "docker-rs",
    "cert-client",
    "edgelet-core",
    "edgelet-docker",
    "edgelet-http",
    "edgelet-http-mgmt",
    "edgelet-http-workload",
    "edgelet-kube",
    "edgelet-test-utils",
    "edgelet-utils",
    "kube-client",
    "identity-client",
    "iotedge",
    "iotedge-proxy",
    "management",
    "systemd",
]
