[package]
name = "cert-client"
version = "0.1.0"
authors = ["Azure IoT Edge Devs"]
publish = false
edition = "2018"

[dependencies]
failure = "0.1"
futures = "0.1"
hyper = "0.12"
log = "0.4"
percent-encoding = "2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
typed-headers = "0.1"
url = "2"

aziot-cert-common-http = { git = "https://github.com/levi106/iot-identity-service", branch = "1.2-k8s" }
aziot-key-common = { git = "https://github.com/levi106/iot-identity-service", branch = "1.2-k8s" }
edgelet-core = { path = "../edgelet-core" }
edgelet-http = { path = "../edgelet-http" }
